# ast-hop

./: .gitignore  LICENSE  README.md  pyproject.toml
ast_hop/: compiler.py  dataset.py  model.py  parser.py  train.py  train_code.py
ast_hop/agent/: __init__.py  cli.py  recursive_agent.py  sandbox.py
benchmark/: run_1m_profile.py  run_compiler_pipeline.py  run_frontier_comparison.py  run_live_api_benchmark.py
docs/specs/: ast_hop.spec.md  tree_sitter_pipeline.spec.md
tests/: test_agent.py  test_ast_hop.py  test_compiler.py
