[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ast-hop"
version = "0.1.0"
description = "AST-Hop: Causal Syntactic Skimming Generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Catalyzer9867"},
]
dependencies = [
    "torch>=2.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tiktoken>=0.5.0",
    "requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ast_hop"]
